@@ -1,9 +1,17 @@
+Thu Jul 23 19:47:59 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/InstanceState.h:
+        * dds/DCPS/InstanceState.inl:
+        * dds/DCPS/InstanceState.cpp:
+
+	  Fixed broken state management for disposed writers.
+
 Thu Jul 23 17:07:10 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * tests/DCPS/Instance/main.cpp:
 
-	  Updates to Instance test (adjusted wait delay for samples);
-	  improved condition for detecting removed instances.
+          Updates to Instance test (adjusted wait delay for samples);
+          improved condition for detecting removed instances.
 
 Thu Jul 23 14:19:02 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
